Bug 116184 - Date acceptance pattern can interfere with entering decimal numbers
Summary: Date acceptance pattern can interfere with entering decimal numbers
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.3.0.4 release
Hardware: All All
: medium minor
Assignee: Eike Rathke (retired, only occasionally showing up)
URL:
Whiteboard: target:7.3.0 target:7.2.2 target:7.1.7
Keywords:
Depends on:
Blocks:
 
Reported: 2018-03-04 15:33 UTC by burkhard.kasten
Modified: 2021-09-14 08:26 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
reproduces the rror (8.49 KB, application/vnd.oasis.opendocument.spreadsheet)
2018-03-04 15:35 UTC, burkhard.kasten
Details
movie to show the failure (38.98 KB, image/gif)
2018-06-01 10:22 UTC, burkhard.kasten
Details
example in writer (692.31 KB, image/gif)
2018-07-15 11:14 UTC, burkhard.kasten
Details
test csv import (83 bytes, text/csv)
2019-04-25 18:36 UTC, Oliver Brinzing
Details

Note You need to log in before you can comment on or make changes to this bug.
Description burkhard.kasten 2018-03-04 15:33:33 UTC
Description:
some numbers are not recognized as numbers


Steps to Reproduce:
1. Open a new calc session
2. chose field a2
3. enter 99,99 --> works fine
4. chose field a3.
5. enter 11,33 --> wrong adjustment: it is not a number!
6. chose field c2. enter a formula =A2*2 --> works fine
7. chose field c3. enter a formula =A3*2 --> result is #WERT!

8. this error occurs in many cases e.g. 31,84

Actual Results:  
impossible to calculate with: #WERT!


Expected Results:
e.g. a+b


Reproducible: Always


User Profile Reset: No



Additional Info:


User-Agent: Mozilla/5.0 (Windows NT 10.0; WOW64; Trident/7.0; rv:11.0) like Gecko
Comment 1 burkhard.kasten 2018-03-04 15:35:50 UTC
Created attachment 140334 [details]
reproduces the rror
Comment 2 Xavier Van Wijmeersch 2018-03-04 17:21:24 UTC
cannot reproduce

in front of number 11,33 there is ' and the calculation in c3 is correct no error message

Version: 6.1.0.0.alpha0+
Build ID: a0d739026d21077e51bfc82ee63d04f6b4b69828
CPU threads: 8; OS: Linux 4.14; UI render: default; VCL: kde4; 
Locale: nl-BE (en_US.UTF-8); Calc: group

So its not a bug, if you not agree you can reopen the report as unconfirmed
Comment 3 burkhard.kasten 2018-03-06 15:47:57 UTC
Hello,

this is really strange ...

I changed the language settings from default-german to english-usa and tried again: everything works fine.

Then I changed back to german: everything works fine, the error is gone - for all new entries!

Software is a big miracle ...

Thanks a lot for your assistance! Maybe it could be helpful for other users having the same problem.
Comment 4 burkhard.kasten 2018-03-06 15:55:26 UTC
p.s.

when reporting the bug no ' was visible. Now it is!

It was surely not my fault, I demonstrated the problem to my partner, he was able to reproduce.
Comment 5 burkhard.kasten 2018-06-01 10:22:45 UTC
Created attachment 142474 [details]
movie to show the failure
Comment 6 burkhard.kasten 2018-06-01 10:26:07 UTC
Version: 6.0.4.2 (x64)

this failure occurs more and more often.

the only workaround in calc is "=1755/100"

the same problem exists in word tables.

workaround here is "=17,55"
Comment 7 burkhard.kasten 2018-06-01 10:28:37 UTC
please look at the gif file as a small movie to show the problem.
Comment 8 Xavier Van Wijmeersch 2018-06-01 13:39:33 UTC
I did have a look at the gif, and yes its there ,but retested with LO6.0.4.2 and still no problem at all.

Try to reset your user profile.

Version: 6.0.4.2
Build ID: 9b0d9b32d5dcda91d2f1a96dc04c645c450872bf
CPU threads: 8; OS: Linux 4.14; UI render: default; VCL: kde4; 
Locale: nl-BE (en_US.UTF-8); Calc: group
Comment 9 burkhard.kasten 2018-06-05 15:36:52 UTC
Hello,
I did - no effect.
The error seems to concern 1- and 2-digit-numbers only.
e.g.
17,55
27,68
26,18
3,22

36,23 is ok
27 is ok
27,0 ist NOT ok

Maybe the problem is somewhere in the german settings? When I changed to english the error was gone, then I changed back to german: it seemed to be ok - for a short time (reboot?).

P.S. I can copy such a value from an elder field in the same table to a new one. That works fine …
Comment 10 Xavier Van Wijmeersch 2018-06-05 17:05:57 UTC
maybe only windows because with the setting to default-german still no problem
retyping 11,33 give me the correct result

Version: 6.0.4.2
Build-ID: 9b0d9b32d5dcda91d2f1a96dc04c645c450872bf
CPU-Threads: 8; BS: Linux 4.14; UI-Render: Standard; VCL: kde4; 
Gebietsschema: de-DE (en_US.UTF-8); Calc: group

@Eike any idea???
Comment 11 Buovjaga 2018-06-22 12:25:19 UTC
Formatted cells to German (Germany). Could not reproduce the problem.

Version: 6.2.0.0.alpha0+ (x64)
Build ID: 2c85607101e2e04e870e3b87362f39f9a9148e6c
CPU threads: 4; OS: Windows 10.0; UI render: default; 
TinderBox: Win-x86_64@42, Branch:master, Time: 2018-06-16_00:12:37
Locale: fi-FI (fi_FI); Calc: group threaded
Comment 12 Timur 2018-06-25 14:19:54 UTC
Please test more to find a cause and pay attention to Tools-Language settings - Languages, Locale settings and Decimal separator key.
Comment 13 burkhard.kasten 2018-07-15 11:14:24 UTC
Created attachment 143559 [details]
example in writer
Comment 14 burkhard.kasten 2018-07-15 11:30:08 UTC
Version 6.0.5.2

no changement in this version

The same error also occurs in writer (see movie). Please look at value 5 and SUM.

It is impossible to work with this fault.

Version 5.4.1.2. (portable) running on the same pc works properly.

writer on another laptop seems to work correctly (same Windows 10, same installation).

My windows is an upgrade from Windows 7 pro. I never played with languages or other settings (separators). 


Language setting is:

deutsch (Deutschland)
deutsch (Deutschland)
separator: checked
currency: standard eur
standard language: deutsch (Deutschland)
asiatic: no
complex text: no
ignore system language: no
Comment 15 Buovjaga 2018-07-15 11:31:01 UTC
(In reply to burkhard.kasten from comment #13)
> Created attachment 143559 [details]
> example in writer

Please, no more gifs! They are extremely user-unfriendly as browsers do not present play controls.
Give steps so everyone has equal possibility to reproduce.
Comment 16 malboarg 2018-09-23 21:38:12 UTC
I can't reproduce.
I have changed language (Spanish to German), both cells (a2,a3) work ok.

Version: 6.0.5.1
Build ID: 0588a1cb9a40c4a6a029e1d442a2b9767d612751
CPU threads: 2; OS: Linux 4.15; UI render: default; VCL: gtk2; 
Locale: es-AR (es_AR.UTF-8); Calc: group

Linux Ubuntu 18.04.1
Comment 17 Xisco Faulí 2018-10-24 10:39:50 UTC
I can't reproduce it in

Versión: 6.1.2.1
Id. de compilación: 65905a128db06ba48db947242809d14d3f9a93fe
Subprocs. CPU: 1; SO: Windows 6.1; Repres. IU: predet.; 
Configuración regional: es-ES (es_ES); Calc: group threaded

Are you sure it's reproducible in safe mode ? Help - Restart in safe mode ?
Comment 18 burkhard.kasten 2018-11-06 18:01:47 UTC
Hello, I am using 6.1.2.1. since several weeks.

The error occurs in the same way as in elder Versions.

Also when started Windows 10 in safe Mode, there is no difference in behaviour.

Today I help myself in reopening the file using version 5.4.1.2. portable on the same machine. Now the cell is shown correctly as '17,90

So I can fix the fault, but this is not really comfortable.
Comment 19 Buovjaga 2018-11-06 18:55:28 UTC
(In reply to burkhard.kasten from comment #18)
> Also when started Windows 10 in safe Mode, there is no difference in
> behaviour.

Not Windows, but LibreOffice: Help - Restart in safe mode and then Continue in safe mode.
Comment 20 burkhard.kasten 2018-11-09 15:58:59 UTC
Sorry,

soffice.exe does not start in safe mode.

CTRL and double click: nothing happens.

start-icon -> execute soffice.exe /safe : Start logo appears for very less than a second, then program ends immediately. Task Manager shows nothing.

start-icon -> execute soffice.exe works fine.

Administrator: Command prompt:

same reaction

C:\Program Files\LibreOffice\program>soffice /safe does not start.

C:\Program Files\LibreOffice\program>soffice starts properly.

I found no interesting entries in error log.
Comment 21 Buovjaga 2018-11-09 16:32:22 UTC
(In reply to burkhard.kasten from comment #20)
> Sorry,
> 
> soffice.exe does not start in safe mode.
> 
> CTRL and double click: nothing happens.
> 
> start-icon -> execute soffice.exe /safe : Start logo appears for very less
> than a second, then program ends immediately. Task Manager shows nothing.
> 
> start-icon -> execute soffice.exe works fine.
> 
> Administrator: Command prompt:
> 
> same reaction
> 
> C:\Program Files\LibreOffice\program>soffice /safe does not start.
> 
> C:\Program Files\LibreOffice\program>soffice starts properly.
> 
> I found no interesting entries in error log.

Why are you doing this, when I said you should do: Help - Restart in safe mode and then Continue in safe mode?
Comment 22 burkhard.kasten 2018-11-15 15:29:52 UTC
Sorry for misunderstanding, I did not check that easy way.

calc:
In safe mode calc shows the faulty cells as '17,90, the other (corrected ones) as 17,9. I can remove ' , this cell and new cells also were filled and calculated correctly.

writer:

Table looks unchanges - except the sum, which is now correct when in safe mode.

I changed a cell, saves the file and opened it again in unsafe mode. --> sum ist wrong again.
Comment 23 Buovjaga 2018-11-19 17:27:36 UTC
(In reply to burkhard.kasten from comment #22)
> Sorry for misunderstanding, I did not check that easy way.
> 
> calc:
> In safe mode calc shows the faulty cells as '17,90, the other (corrected
> ones) as 17,9. I can remove ' , this cell and new cells also were filled and
> calculated correctly.
> 
> writer:
> 
> Table looks unchanges - except the sum, which is now correct when in safe
> mode.
> 
> I changed a cell, saves the file and opened it again in unsafe mode. --> sum
> ist wrong again.

Ok, you can reset your profile to get rid of the problem: https://wiki.documentfoundation.org/UserProfile
Comment 24 burkhard.kasten 2018-12-07 13:54:20 UTC
Now the error ist reproducable:

Options -> Language Settings -> Language ->  Date acceptance Patterns:

D.M.Y;D.M.;D.;D,M,Y,;D,M,;D,

This entry allows to write dates using the digits block of the german keyboard, which bears "," instead of decimal point.

The very last entry "D," causes the problem, using german as well as english language.

It would be very nice to fix that.
Comment 25 Buovjaga 2019-01-12 11:39:16 UTC
(In reply to burkhard.kasten from comment #24)
> Now the error ist reproducable:
> 
> Options -> Language Settings -> Language ->  Date acceptance Patterns:
> 
> D.M.Y;D.M.;D.;D,M,Y,;D,M,;D,
> 
> This entry allows to write dates using the digits block of the german
> keyboard, which bears "," instead of decimal point.
> 
> The very last entry "D," causes the problem, using german as well as english
> language.
> 
> It would be very nice to fix that.

Yep, I can repro with this. The Date acceptance pattern feature is already in 4.3, but not yet in 3.5.

I feel this might be a tricky issue. How to determine what the user wants to express with their typing? Setting to NEW for now.
Comment 26 Xavier Van Wijmeersch 2019-01-12 20:43:15 UTC
I changed the last comma with a point and then i cannot reproduce
With the comma I can also reproduce the problem
Comment 27 Oliver Brinzing 2019-04-25 18:31:39 UTC
i can confirm this too.
for convenience we added "D." to Date acceptance patterns.
this worked by default with AOO 4.1.5, but with LO it has
some side effects.

steps to reproduce:
- Menu Tools/Options/Language Settings/Languages
  -> Locale setting: "German (Germany)"
  -> add to Date acceptance patterns: "D."
- create new spreadsheet
- enable Menu "View/Value Highlighting"
- cell A1, enter: 1.
  -> Date: 01.04.19
- cell B1, enter: -1.234,56
  -> Text: -1.234,56
- Cell B2, enter: =Value(B1)
  -> Err:522

now remove "D." from Date acceptance patterns and 
- create new spreadsheet
- cell A1, enter: 1.
  -> Text: 1.
- cell B1, enter: -1.234,56
  -> Value: -1234,56
- cell B2, format as Text @ and enter: -1.234,56
- cell B3, enter: =Value(B2)
  -> Value: -1234,56
Comment 28 Oliver Brinzing 2019-04-25 18:36:12 UTC
Created attachment 151013 [details]
test csv import

csv import is also affected:

- open attaced *.csv file
- Text Import dialog options:
  [X] Semicolon
  [X] Detect special numbers

-> with "D." first data row is not converted into values
Comment 29 QA Administrators 2021-04-25 04:02:17 UTC Comment hidden (obsolete)
Comment 30 Eike Rathke (retired, only occasionally showing up) 2021-09-12 22:27:03 UTC
*Of course* defining a D. date acceptance pattern if the decimal separator is . dot as well (or D, with comma decimal separator) is asking for trouble. Geez..
Comment 31 Commit Notification 2021-09-13 11:58:29 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/eb0b4ab2d3b86d77ee0edb652d4486343e5b3b1f

Resolves: tdf#116184 Check that there is no trailing number behind a match

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 32 Eike Rathke (retired, only occasionally showing up) 2021-09-13 11:59:37 UTC
Pending review
https://gerrit.libreoffice.org/c/core/+/122054 for 7-2
https://gerrit.libreoffice.org/c/core/+/122055 for 7-1
Comment 33 Commit Notification 2021-09-13 13:15:38 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/c2d838598add1daff8c7429432715a8dd78231f0

Resolves: tdf#116184 Check that there is no trailing number behind a match

It will be available in 7.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 34 Commit Notification 2021-09-14 08:26:59 UTC
Eike Rathke committed a patch related to this issue.
It has been pushed to "libreoffice-7-1":

https://git.libreoffice.org/core/commit/d2a78a49438134e174bb8fc83d4adb486f692ff7

Resolves: tdf#116184 Check that there is no trailing number behind a match

It will be available in 7.1.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.