Resolves: tdf#116184 Check that there is no trailing number behind a match

... without being separated by a blank so the match is rejected if
it doesn't possibly form a date+time input and input can be
accepted as decimal fraction.

Change-Id: Iabd1d216366ecb8454c59822ce58f112bfa6091e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/122024
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins
(cherry picked from commit eb0b4ab2d3b86d77ee0edb652d4486343e5b3b1f)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/122055
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>